[package]
name = "test_sered"
version = "0.1.0"
authors = ["Samrat K S <samrat.ks@soroco.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.*" ,features = ["derive"]}
bson = "0.13"
serde_json = "1.0.40"
serde_derive = "1.0.98"
ron = "*"