[package]
name = "kvs"
version = "0.1.0"
authors = ["Samrat K S <samrat.kashipath1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { features = ["yaml"]}


[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"